# OctaneBlender

./: .gitattributes  .gitignore
blender/: .clang-format  .gitignore  (+3 more)
blender/intern/octane/: CMakeLists.txt  Integration.txt  SConscript
blender/intern/octane/blender/: CMakeLists.txt  OCT_api.h  blender_camera.cpp  blender_client.cpp  blender_hair.cpp  blender_mesh.cpp  blender_mesh.cpp~  blender_object.cpp  blender_octanedb.cpp  blender_octanedb.h  blender_python.cpp  blender_session.cpp  blender_session.h  blender_shader.cpp  blender_sync.cpp  blender_sync.h  blender_util.h  camera.cpp  client.cpp  client.h  hair.cpp  mat_livedb_intern.h  memleaks_check.h  mesh.cpp  object.cpp  octanedb.cpp  octanedb.h  python.cpp  session.cpp  session.h  shader.cpp  sync.cpp  sync.h  util.h
blender/intern/octane/blender/addon/: __init__.py  converters.py  engine.py  handlers.py  nodeitems_octane.py  octane_server.py  operators.py  osl.py  preferences.py  presets.py  properties.py  types.py  ui.py  version_update.py
blender/intern/octane/blender/addon/assets/: startup.blend
blender/intern/octane/blender/addon/compatibilities/: __init__.py  legacy.py  version_28_x.py  version_29_x.py
blender/intern/octane/blender/addon/core/: __init__.py  caches.py  client.py  frame_buffer.py  object_cache.py  ocs_loader.py  octane_info.py  octane_node.py  octanedb.py  resource_cache.py  session.py
blender/intern/octane/blender/render/: buffers.cpp  buffers.h  camera.cpp  camera.h  environment.cpp  environment.h  graph.cpp  graph.h  kernel.cpp  kernel.h  light.cpp  light.h  mesh.cpp  mesh.h  nodes.cpp  nodes.h  object.cpp  object.h  passes.cpp  passes.h  scene.cpp  scene.h  session.cpp  session.h  shader.cpp  shader.h
blender/intern/octane/blender/server/: OctaneClient.h  octane_client.cpp  octane_client.h  octane_data_type.h  octane_manager.cpp  octane_manager.h  octane_network.cpp  octane_network.h  octane_network_const.h  server.cpp  server.h
blender/intern/octane/blender/util/: util_hash.h  util_lists.h  util_math.h  util_path.cpp  util_path.h  util_progress.cpp  util_progress.h  util_string.cpp  util_string.h  util_task.cpp  util_task.h  util_thread.h  util_time.cpp  util_time.h  util_transform.cpp  util_transform.h  util_types.h
blender/intern/octane/cmake/: external_libs.cmake  macros.cmake
blender/intern/octane/doc/license/: CMakeLists.txt  readme.txt
blender/intern/octane/graph/: CMakeLists.txt  node.cpp  node.h  node_enum.h  node_type.cpp  node_type.h  node_xml.cpp  node_xml.h
blender/intern/octane/nodes/emissions/: node_oct_emission_black_body.c  node_oct_emission_texture.c
blender/intern/octane/nodes/materials/: node_oct_shader_diffuse_mat.c  node_oct_shader_glossy_mat.c  node_oct_shader_mix_mat.c  node_oct_shader_portal_mat.c  node_oct_shader_specular_mat.c
blender/intern/octane/nodes/mediums/: node_oct_medium_absorbtion.c  node_oct_medium_absorption.c  node_oct_medium_scattering.c  node_oct_medium_volume.c
blender/intern/octane/nodes/projections/: node_oct_projection_box.c  node_oct_projection_cyl.c  node_oct_projection_persp.c  node_oct_projection_spherical.c  node_oct_projection_uvw.c  node_oct_projection_xyz.c
blender/intern/octane/nodes/textures/: node_oct_texture_alpha_image.c  node_oct_texture_checks.c  node_oct_texture_clamp.c  node_oct_texture_colorcorrect.c  node_oct_texture_cosine_mix.c  node_oct_texture_dirt.c  node_oct_texture_displacement.c  node_oct_texture_falloff.c  node_oct_texture_float.c  node_oct_texture_float_image.c  node_oct_texture_gaussian_spectrum.c  node_oct_texture_gradient.c  node_oct_texture_image.c  node_oct_texture_invert.c  node_oct_texture_marble.c  node_oct_texture_mix.c  node_oct_texture_multiply.c  node_oct_texture_noise.c  node_oct_texture_polygon_side.c  node_oct_texture_random_color.c  node_oct_texture_rgb_spectrum.c  node_oct_texture_ridged_fractal.c  node_oct_texture_saw_wave.c  node_oct_texture_sine_wave.c  node_oct_texture_triangle_wave.c  node_oct_texture_turbulence.c  node_oct_texture_volume_ramp.c  node_oct_texture_w.c
blender/intern/octane/nodes/transforms/: node_oct_transform_2d.c  node_oct_transform_3d.c  node_oct_transform_full.c  node_oct_transform_rotation.c  node_oct_transform_scale.c
blender/intern/octane/nodes/values/: node_oct_value_float.c  node_oct_value_int.c
blender/intern/octane/render/: CMakeLists.txt  attribute.cpp  attribute.h  buffers.cpp  buffers.h  camera.cpp  camera.h  common_d3d.cpp  common_d3d.hpp  environment.cpp  environment.h  graph.cpp  graph.h  kernel.cpp  kernel.h  light.cpp  light.h  mesh.cpp  mesh.h  object.cpp  object.h  octane_scatter.h  osl.cpp  osl.h  particles.cpp  particles.h  passes.cpp  passes.h  scene.cpp  scene.h  session.cpp  session.h  shader.cpp  shader.h
blender/intern/octane/render/kernel/: kernel_math.h  kernel_types.h
blender/intern/octane/util/: CMakeLists.txt  algorithm.h  aligned_malloc.cpp  aligned_malloc.h  args.h  array.h  atomic.h  boundbox.h  color.h  debug.cpp  debug.h  defines.h  deque.h  disjoint_set.h  function.h  guarded_allocator.cpp  guarded_allocator.h  guiding.h  half.h  hash.h  ies.cpp  ies.h  image.h  image_impl.h  list.h  log.cpp  log.h  map.h  math.h  math_cdf.cpp  math_cdf.h  math_fast.h  math_float2.h  math_float3.h  math_float4.h  math_float8.h  math_int2.h  math_int3.h  math_int4.h  math_int8.h  (+193 more)
blender/source/blender/nodes/: CMakeLists.txt  NOD_register.hh  NOD_shader.h  NOD_static_types.h
blender/source/blender/nodes/intern/: node_exec.cc  node_register.cc  node_util.c  node_util.cc  node_util.h  node_util.hh
blender/source/blender/nodes/shader/: node_shader_register.cc  node_shader_register.hh  node_shader_tree.c  node_shader_tree.cc  node_shader_util.c  node_shader_util.cc
blender/source/blender/nodes/texture/: node_texture_tree.c
blender/source/blender/python/: BPY_extern_python.hh  CMakeLists.txt  SConscript
blender/source/blender/python/intern/: CMakeLists.txt  bpy_capi_utils.h  bpy_driver.c  bpy_interface.c  bpy_interface.cc  bpy_rna_callback.c
blender/source/blender/python/mathutils/: mathutils.c  mathutils.h
(+1656 files in other folders)
